# portfolio-2026-backend

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md
.githooks/: pre-push
.github/: SUPPORT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  commitlint.yml  release.yml
.sqlx/: query-0dfce961567a664dfb47a9067a86e67335430fa3975ae963de9be2c90147e3b1.json  query-20187940f200b30c87b2bc15a47663174a1262c4f5dad316caf388ef4272da8d.json  query-3be514b627b39d5fe57554d7bdb40b20ceb50731317d3f97e108551c66a5bd62.json  query-8600de34d7fc34377623eb8ce7b78248441300cf0bf3eff911f1fc8373d9f44c.json  query-d6a58b62757d938b0641fcf2fa714bbe4279b64d97d774d33669d92e4bdbe760.json  query-f3c0c86a2792be8972afb78a6c8a0393186bba3c84693e2e452e462656755a06.json
crates/application/: Cargo.toml
crates/application/src/: keys.rs  lib.rs  testing.rs
crates/domain/: Cargo.toml
crates/domain/src/: key_value_repository.rs  lib.rs  viewers.rs  viewers_repository.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/migrations/: 20260703144231_create_key_value_table.sql  20260703144232_create_viewers_table.sql
crates/infrastructure/src/: lib.rs  postgress_key_value_repository.rs  potgress_viewers_repository.rs
crates/shared/: Cargo.toml
crates/shared/src/: env.rs
crates/web/: Cargo.toml
crates/web/src/: health.rs  lib.rs  response.rs  state.rs  viewers.rs
docs/: README.md
src/: main.rs
terraform/docker/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
(+16 files in other folders)
