[package]
name = "portfolio-2026-backend"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
  "crates/web",
  "crates/application",
  "crates/domain",
  "crates/infrastructure"
, "crates/shared"]


[dependencies]
axum = "0.8.9"
tokio = { workspace = true, features = ["full"] }
web = { path = "crates/web" }
shared = { path = "crates/shared" }


[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
